[EBVN-03] Introduce API redirect link (#3)
* introduce API redirect link

* update router wildcard

* add error log

---------
